<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MENU STRINGS-->
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>


    <string name="app_name">TickSpot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_info_no_signup">"Log in to continue"</string>
    <string name="login_button">Sign in</string>
    <string name="action_forgot_password">Forgot your password? Try again!</string>
    <string name="loggin_in">Signing in…</string>
    <string name="login_email">Email address</string>
    <string name="login_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_credentials">Email address or password incorrect. Please try again.</string>
    <string name="could_not_authenticate">Could not authenticate</string>
    <string name="problem_contacting_server">Could not connect to server</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>

    <!-- Preset Dialog -->
    <string name="add_preset">Add preset</string>
    <string name="save_preset_button">Save preset</string>
    <string name="cancel_preset_button">Cancel</string>
    <string name="text_projects">Select a project</string>
    <string name="text_tasks">Select a task</string>
    <string name="text_hours">Working hours</string>
    <string name="select_project">Select one project to enable the Tasks</string>
    <string name="spinner_preset_empty">Create one Preset</string>
    <string name="project_string">Project:</string>
    <string name="task_string">Task:</string>
    <string name="hours_string">Working hours:</string>
    <string name="spinners_not_selected">To save a Preset you need to select both spinners</string>

    <!-- Main activity -->
    <string name="button_enter_time">Enter Time</string>

</resources>
